--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -77,7 +77,7 @@
         <li class="list-inline-item"><a
             href="https://docs.minaexplorer.com/minaexplorer/website-terms-of-service">Terms</a></li>
         <li class="list-inline-item"><a
-            href="https://docs.minaexplorer.com/minaexplorer/graphql-getting-started">API</a></li>
+            href="https://docs.minaexplorer.com/minaexplorer/graphql-getting-started">GraphQL API</a></li>
         <li class="list-inline-item"><a href="https://docs.minaexplorer.com/minaexplorer/get-help">Support</a></li>
       </ul>
     </footer>
