--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description"
     content="Tool to generate compatible files to import MINA transactions to popular tax software.">
-  <title>MinaExplorer Tax Exporter</title>
+  <title>MinaExplorer Exporter Tool</title>
 
   <!-- Bootstrap core CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -21,7 +21,7 @@
   <div class="container">
     <main>
       <div class="py-5 text-center">
-        <h2>MinaExplorer Tax Export Tool</h2>
+        <h2>MinaExplorer Exporter Tool</h2>
         <p class="lead">Use the form below to export a CSV that you can import for your tax software for any address.
           Missing your favourite tax software? - request it <a href="https://feedback.minaexplorer.com/">here</a>. This
           is not tax advice. Consult a tax professional to review the generated output.
