--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -24,7 +24,8 @@
         <h2>MinaExplorer Exporter Tool</h2>
         <p class="lead">Use the form below to export a CSV that you can import for your tax software for any address.
           Missing your favourite tax software? - request it <a href="https://feedback.minaexplorer.com/">here</a>. This
-          is not tax advice. Consult a tax professional to review the generated output.
+          is not tax advice. Consult a tax professional to review the generated output and modify it to fit your
+          reporting requirements.
         </p>
       </div>
 
