--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -47,7 +47,7 @@
               </div>
 
               <div class="col-12">
-                <label for="export" class="form-label">Export Format</label>
+                <label for="country" class="form-label">Export Format</label>
                 {{ form.export(class="form-select", id="export") }}
                 <div class="invalid-feedback">
                   Please select a valid export format.
@@ -55,26 +55,10 @@
               </div>
 
               <div class="col-12">
-                <label for="export_type" class="form-label">Export Type</label>
+                <label for="country" class="form-label">Export Type</label>
                 {{ form.export_type(class="form-select", id="export_type") }}
                 <div class="invalid-feedback">
                   Please select a valid export type.
-                </div>
-              </div>
-
-              <div class="col-12">
-                <label for="start_date" class="form-label">Start Date</label>
-                {{ form.start_date(class='datepicker form-control', id="start_date") }}
-                <div class="invalid-feedback">
-                  Please choose a valid start date.
-                </div>
-              </div>
-
-              <div class="col-12">
-                <label for="start_date" class="form-label">End Date</label>
-                {{ form.end_date(class="form-control datepicker", id="end_date") }}
-                <div class="invalid-feedback">
-                  Please choose a valid end date.
                 </div>
               </div>
 
